--- a/恶意代码综述.md
+++ b/恶意代码综述.md
@@ -78,9 +78,154 @@ infective_length 表示用病毒感染长度区分 family 或 group 中不同寄
 
 
 
-# 恶意代码分析下目的
+## 恶意代码分析基础
+
+恶意代码分信息目的：
 
 * 特征码
 * 分析报告
 * 专杀工具
+
+![image-20210625130757861](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210625130757861.png)
+
+C2：僵尸网络控制端
+
+![image-20210625131002972](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210625131002972.png)
+
+下载器+启动器，是一个闭环。现在的恶意代码是多模块配合。
+
+间谍软件：偷取信息。
+
+内核套件：比较底层，权限相对较高，不容易被发现。
+
+CPU：第三环，应用层；零环，驱动层；一二层使用较少。
+
+勒索软件：对别人电脑中的重要软件作非对称加密。要求钱财。
+
+蠕虫：带感染功能的，都叫蠕虫。
+
+
+
+## 恶意软件样本库
+
+*收集用于分析的恶意软件样本*
+
+- [Clean MX](https://link.zhihu.com/?target=http%3A//support.clean-mx.de/clean-mx/viruses.php) - 恶意软件和恶意域名的实时数据库
+- [Contagio](https://link.zhihu.com/?target=http%3A//contagiodump.blogspot.com/) - 近期的恶意软件样本和分析的收集
+- [Exploit Database](https://link.zhihu.com/?target=https%3A//www.exploit-db.com/) - Exploit 和 shellcode 样本
+- [Malshare](https://link.zhihu.com/?target=http%3A//malshare.com/) - 在恶意网站上得到的大量恶意样本库
+- [MalwareDB](https://link.zhihu.com/?target=http%3A//malwaredb.malekal.com/) - 恶意软件样本库
+- [Open Malware Project](https://link.zhihu.com/?target=http%3A//openmalware.org/) - 样本信息和下载
+- [Ragpicker](https://link.zhihu.com/?target=https%3A//github.com/robbyFux/Ragpicker) - 基于 malware crawler 的一个插件
+- [theZoo](https://link.zhihu.com/?target=https%3A//github.com/ytisf/theZoo) - 分析人员的实时恶意样本库
+- [Tracker h3x](https://link.zhihu.com/?target=http%3A//tracker.h3x.eu/) - Agregator 的恶意软件跟踪和下载地址
+- [ViruSign](https://link.zhihu.com/?target=http%3A//www.virusign.com/) - 除 ClamAV 外的反病毒程序检出的恶意软件数据库
+- [VirusShare](https://link.zhihu.com/?target=http%3A//virusshare.com/) - 恶意软件库
+- [VX Vault](https://link.zhihu.com/?target=http%3A//vxvault.net/) - 恶意软件样本的主动收集
+- [Zeltser's Sources](https://link.zhihu.com/?target=https%3A//zeltser.com/malware-sample-sources/) - 由 Lenny Zeltser 整理的恶意软件样本源列表
+- [Zeus Source Code](https://link.zhihu.com/?target=https%3A//github.com/Visgean/Zeus) - 2011 年 Zeus 源码泄露
+
+
+
+## 恶意代码分析方法
+
+* **静态分析**
+
+基础技术
+
+主要是特征码扫描，该技术利用简单的特征码来判断文件是否存在恶意。对复杂的恶意代码基本无效，可能会遗漏一些行为。
+
+高级技术
+
+主要是静态启发式扫描技术，将可执行文件放到反汇编器里，将二进制文件转换成汇编语言。查看程序指令来判断。
+
+
+
+* **动态分析**
+
+主要检测：文件行为、进程行为、网络行为、注册表行为
+
+基础：沙箱，用安全的环境来运行恶意代码。轻量级虚拟机。代码对文件和注册表的操作为重定向到指定位置。
+
+高级：动态行为分析，提供执行文件中抽取信息的路径，通过调试器跟踪观察程序的内部状态（寄存器内容、函数结果、内存使用...）。
+
+动态分析方法可以有效提高分析的准确率，动态行为分析技术能够有效地弥补传统 的特征码检测技术无法检测到未知病毒的缺点。但是该技术也存在着不足，如产生的误 报率较高，且不能识别出病毒的名称和类型。
+
+
+
+# 基于API调用的恶意代码动态行为分析
+
+## Cuckoo HOOK技术
+
+Cuckoo Sandbox中Host Machine（中央关系模块）负责动态行为监控以及HOOK函数设置。
+
+API Hook对虚拟机中的API函数设置钩子，获取API调用的行为，将函数地址改到调用函数的指针上。调用函数时就能调用事先编写好的函数，避免攻击，同时可以透明观察函数对虚拟机的内部调用。
+
+* 文件操作：会跳转自己写好的函数中，不让其直接调用系统函数。（如创建文件“CreateFile”函数会调转到“myCreateFIle”）
+
+* 注册表：沙箱中会自动生成
+
+  “\HKEY_CURRENT_USER\mySandBox”
+
+  当程序访问注册表时，会拷贝其调用的参数，重命名后放到这个跟键下。
+
+* 网络服务：搭建局域网，让沙箱里的系统访问外网，允许正常数据接收，但是会重定向到指定位置。
+
+* 进程操作：对进程操作来说，当要创建某个不受 信任的进程时，被监控的子进程在还未运行时需要调用 backCallFunc 函数，返回参数 ID 号，通过对比审计进程表 ID 号，如果匹配成功，需要对该进程操作进行虚拟重定向。
+
+### Windows API机制
+
+API（Application Programming Interface）
+
+Windows底层提供给应用程序的接口。
+
+**六大类**：文件、网络、注册表、进程、系统、其他
+
+恶意代码运行也是调用Windows API函数实现。通过恶意代码运行时调用的API可以分析出其动态行为特征。
+
+
+
+### 恶意代码常见API
+
+恶意代码对API的调用顺序和传参是的表现会不同于正常程序。
+
+恶意代码的动态行为分析和特征提取主要依赖：API函数名和函数种类。
+
+恶意代码常调用的 API:
+
+* 截屏
+
+  ![image-20210706095448664](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095448664.png)
+
+* 系统信息获取
+
+  ![image-20210706095526492](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095526492.png)
+
+![image-20210706095554541](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095554541.png)
+
+![image-20210706095609958](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095609958.png)
+
+![image-20210706095622215](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095622215.png)
+
+* 自启动
+
+  1、注册表自启动
+
+  ![image-20210706095718693](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095718693.png)
+
+  2、服务自启动
+
+  ![image-20210706095733228](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095733228.png)
+
+* 文件行为
+
+  ![image-20210706095820602](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095820602.png)
+
+* 网络行为
+
+  ![image-20210706095844652](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095844652.png)
+
+* 进程行为
+
+  ![image-20210706095911945](C:\Users\Z&S\AppData\Roaming\Typora\typora-user-images\image-20210706095911945.png)
 
